Fix  T514561: dxTreeList - expand button is not visible after select row in contrast theme (#142)

--- a/styles/widgets/generic/color-schemes/contrast/generic.contrast.less
+++ b/styles/widgets/generic/color-schemes/contrast/generic.contrast.less
@@ -1185,6 +1185,7 @@
 @treelist-search-color: @base-inverted-text-color;
 
 @treelist-spin-icon-color: @base-icon-color;
+@treelist-selection-spin-icon-color: @base-inverted-text-color;
 
 /**
 * @name 160. Highlighted text background color
