--- a/styles/widgets/generic/color-schemes/light/generic.light.less
+++ b/styles/widgets/generic/color-schemes/light/generic.light.less
@@ -1574,6 +1574,12 @@
 * @group treelist
 */
 @treelist-spin-icon-color: lighten(@base-icon-color, 38.5%);
+/**
+* @name 152. Selection spin icon color
+* @type color
+* @group treelist
+*/
+@treelist-selection-spin-icon-color: @treelist-spin-icon-color;
 
 /**
 * @name 160. Highlighted text background color
