--- a/styles/widgets/generic/treeList.generic.less
+++ b/styles/widgets/generic/treeList.generic.less
@@ -48,6 +48,12 @@
             margin-top: -@TREELIST_ICON_MARGIN_TOP;
         }
     }
+    
+    .dx-selection {
+        .dx-treelist-empty-space  {
+            color: @treelist-selection-spin-icon-color;
+        }
+    }
 
     .dx-treelist-cell-expandable {
         white-space: nowrap;
